group "com.ryanheise.just_audio"
version "1.0"
def args = ["-Xlint:deprecation","-Xlint:unchecked"]

buildscript {
    ext {
        agp_version = '8.5.2'
    }
    repositories {
        google()
        mavenCentral()
    }

    dependencies {
        classpath "com.android.tools.build:gradle:$agp_version"
    }
}

rootProject.allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

project.getTasks().withType(JavaCompile) {
    options.compilerArgs.addAll(args)
}

apply plugin: "com.android.library"

android {
    namespace "com.ryanheise.just_audio"

    compileSdk = 35

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    defaultConfig {
        minSdk = 16
    }

    lintOptions {
        disable 'AndroidGradlePluginVersion', 'InvalidPackage', 'GradleDependency', 'NewerVersionAvailable', 'UnsafeOptInUsageError'
    }
}
dependencies {
    def exoplayer_version = "1.4.1"
    implementation "androidx.media3:media3-exoplayer:$exoplayer_version"
    implementation "androidx.media3:media3-exoplayer-dash:$exoplayer_version"
    implementation "androidx.media3:media3-exoplayer-hls:$exoplayer_version"
    implementation "androidx.media3:media3-exoplayer-smoothstreaming:$exoplayer_version"
}
